# Spaceship

./: .gitignore  Build.sh  CMakeLists.txt
Game/Content/: Material.mat
Game/Source/Core/: Application.cpp  CameraSubsystem.cpp  CameraSubsystem.h
